Hallelujah finally solved issue of modal appearing behind backdrop. Added payment icons in cart, and added social media icons in landing page.

--- a/ecomm-store/public/index.css
+++ b/ecomm-store/public/index.css
@@ -1,6 +1,6 @@
-/* html {
+html {
   background-color: '#252525';
-} */
+}
 
 body {
   margin: 0;
